java-yaml/service-registry/deployment-ha.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ot-java-service-registry-deployment-dev
  namespace: dev
  labels:
    app: ncn-service-registry-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ncn-service-registry-dev
  template:
    metadata:
      labels:
        app: ncn-service-registry-dev
    spec:
      affinity:  # Add anti-affinity rule
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - ncn-service-registry-dev
            topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: false
      imagePullSecrets:
        - name: my-registry-key1
      containers:
        - name: ncn-registry-dev
          image: newcloudnetworks/dev-java-registry:ot-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          securityContext:
            capabilities:
              drop:
                - "ALL"
              add:
                - NET_ADMIN  # Add the NET_ADMIN capability
                - CHOWN      # Add the CHOWN capability
                - FOWNER
                - DAC_OVERRIDE
                - DAC_READ_SEARCH
                - SETGID
                - SETUID
                - SYS_CHROOT
                - SYS_NICE
                - SYS_RESOURCE
                - NET_BIND_SERVICE
            allowPrivilegeEscalation: false
          resources:
            limits:
              cpu: "2"
              memory: "2Gi"
            requests:
              cpu: "0.5"
              memory: "512Mi"
          command:
            - /bin/sh
            - -c
            - |
              echo "Creating scripts"
              echo "java -Dspring.profiles.active=dev -jar ./*.jar" >> ./script.sh
              echo "while true; do sleep 1d; done" >> ./script.sh
              echo "apply 'chmod +x' to *.sh"
              chmod +x ./script.sh
              echo "execute script.sh now"
              sh ./script.sh
