java-yaml/service-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: ot-service-registry-svc-dev
 namespace: dev
 labels:
   app: ncn-service-registry-dev
spec:
 type: ClusterIP
 ports:
 - name: http
   protocol: TCP
   port: 8761
   targetPort: 8761
 selector:
   app: ncn-service-registry-dev
