java-yaml/service-registry/ingress-registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ot-service-registry-ingress-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /eureka(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ot-service-registry-svc-dev
            port:
              number: 8761
